--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -11,7 +11,7 @@
   --primary: #030213;
   --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.95 0.0058 264.53);
-  --secondary-foreground: #030213;
+  --secondary-foreground: oklch(43.9% 0 0);
   --muted: #ececf0;
   --muted-foreground: #717182;
   --accent: #e9ebef;
